--- a/app/src/main/res/layout/comic_design.xml
+++ b/app/src/main/res/layout/comic_design.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/image_view_list_fragment_comics_picture1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_launcher_foreground"
         android:layout_marginTop="8dp"
