--- a/app/src/main/res/layout/list_fragment_series.xml
+++ b/app/src/main/res/layout/list_fragment_series.xml
@@ -9,7 +9,7 @@ tools:showIn="@layout/list_fragment_series"
 tools:context=".MainActivity">
 
 <android.support.v7.widget.RecyclerView
-    android:id="@+id/recycler_view"
+    android:id="@+id/recycler_view_series"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scrollbars="vertical" />
