--- a/app/src/main/res/layout/list_fragment_stories.xml
+++ b/app/src/main/res/layout/list_fragment_stories.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:showIn="@layout/list_fragment_stories"
+tools:context=".MainActivity">
+
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/recycler_view_stories"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    android:scrollbars="vertical" />
 
-    <ImageView
-        android:id="@+id/image_view_list_fragment_stories_picture1"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:scaleType="centerCrop"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginTop="6dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
