--- a/app/src/main/res/layout/comic_details_activity.xml
+++ b/app/src/main/res/layout/comic_details_activity.xml
@@ -18,6 +18,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <ImageView
+        android:id="@+id/image_view_comic_details_activity_image"
+        android:layout_width="150dp"
+        android:layout_height="225dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_view_comic_details_activity_title"
+        />
+
     <TextView
         android:id="@+id/text_view_comic_details_activity_description"
         android:layout_width="match_parent"
@@ -28,6 +39,6 @@
         android:textColor="@color/colorAccent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_view_comic_details_activity_title"/>
+        app:layout_constraintTop_toBottomOf="@id/image_view_comic_details_activity_image"/>
 
 </android.support.constraint.ConstraintLayout>
