--- a/app/src/main/res/layout/comic_details_activity.xml
+++ b/app/src/main/res/layout/comic_details_activity.xml
@@ -26,8 +26,7 @@
         android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_view_comic_details_activity_title"
-        />
+        app:layout_constraintTop_toBottomOf="@id/text_view_comic_details_activity_title"/>
 
     <TextView
         android:id="@+id/text_view_comic_details_activity_description"
