--- a/app/src/main/res/layout/list_fragment_comics.xml
+++ b/app/src/main/res/layout/list_fragment_comics.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:showIn="@layout/list_fragment_comics"
-tools:context=".MainActivity">
-
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/recycler_view_comics"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="vertical" />
+    tools:context=".MainActivity"
+    tools:showIn="@layout/list_fragment_comics">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_comics"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        android:scrollbars="vertical" />
+    <TextView
+        android:id="@+id/no_data_text_view"
+        android:text="No data for now"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        android:gravity="center"/>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
