--- a/app/src/main/res/layout/series_details_activity.xml
+++ b/app/src/main/res/layout/series_details_activity.xml
@@ -9,13 +9,13 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/text_view_comic_details_activity_title"
+            android:id="@+id/text_view_series_details_activity_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
-            android:gravity="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:textColor="@color/colorPrimary"
             android:textSize="32sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -23,18 +23,18 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/image_view_comic_details_activity_image"
+            android:id="@+id/image_view_series_details_activity"
             android:layout_width="300dp"
             android:layout_height="370dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
-            android:paddingBottom= "24dp"
+            android:paddingBottom="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_view_comic_details_activity_title" />
+            app:layout_constraintTop_toBottomOf="@id/text_view_series_details_activity_name" />
 
         <TextView
-            android:id="@+id/text_view_comic_details_activity_description"
+            android:id="@+id/text_view_series_details_activity_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
@@ -42,10 +42,10 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="16dp"
             android:textColor="@color/colorAccent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/image_view_comic_details_activity_image"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/image_view_series_details_activity" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
