--- a/app/src/main/res/layout/list_fragment_comics.xml
+++ b/app/src/main/res/layout/list_fragment_comics.xml
@@ -14,7 +14,7 @@
         android:scrollbars="vertical" />
     <TextView
         android:id="@+id/no_data_text_view"
-        android:text="No data for now"
+        android:text="@string/no_comics_to_show"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible"
