--- a/app/src/main/res/layout/list_fragment_series.xml
+++ b/app/src/main/res/layout/list_fragment_series.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:showIn="@layout/list_fragment_series"
-tools:context=".MainActivity">
-
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/recycler_view_series"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:scrollbars="vertical" />
+    android:layout_height="match_parent"
+    tools:context=".MainActivity"
+    tools:showIn="@layout/list_fragment_series">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_series"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        android:scrollbars="vertical" />
+
+    <TextView
+        android:id="@+id/no_data_text_view_series"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/no_series_to_show"
+        android:visibility="invisible" />
+
+    <ProgressBar
+        android:id="@+id/progressBar_series"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
