--- a/app/src/main/res/layout/series_details_activity.xml
+++ b/app/src/main/res/layout/series_details_activity.xml
@@ -16,6 +16,7 @@
             android:layout_marginTop="14dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+            android:gravity="center"
             android:textColor="@color/colorPrimary"
             android:textSize="32sp"
             app:layout_constraintEnd_toEndOf="parent"
