--- a/app/src/main/res/layout/superhero_details_design.xml
+++ b/app/src/main/res/layout/superhero_details_design.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/constraint_superhero_details"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorGray">
 
     <TextView
         android:id="@+id/text_view_superhero_details_design_name"
