--- a/app/src/main/res/layout/list_superhero_constraint.xml
+++ b/app/src/main/res/layout/list_superhero_constraint.xml
@@ -18,10 +18,12 @@
         android:id="@+id/text_view_list_superhero_constraint_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="24dp"
-        android:paddingBottom="12dp"
+        android:gravity="center"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:textSize="24sp"
-        android:textColor="@color/colorWhite"
+        android:background="#8FFF"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="@id/image_view_list_superhero_constraint_picture"
         app:layout_constraintStart_toStartOf="parent" />
 
